Eleventy config for watch and passthrough CSS

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -7,6 +7,7 @@
     <title>
       {{ title }}
     </title>
+    <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
   </head>
   <body>
     <h1>{{title }}</h1>
