--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,8 @@
 html {
-  color:red;
-  background-color: grey;
-  font-size: 16px;
+  color:rebeccapurple;
+  background-color: #eee;
+  font-size: 28px;
   margin: 0;
+  padding: 0;
 }
 
