--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -7,9 +7,17 @@
     <title>
       {{ title }}
     </title>
+    <link rel="icon" href="{{ '/favicon.png' | url }}"/>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
+    <link href="https://unpkg.com/@umich-lib/web@1/umich-lib.css" rel="stylesheet"/>
+    <script type="module" src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.esm.js"></script>
+    <script nomodule src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.js"></script>
   </head>
   <body>
+    <m-universal-header></m-universal-header>
+    <m-website-header name="11ty Starter">
+      <a href="/">Log in</a>
+    </m-website-header>
     <h1>{{title }}</h1>
     {{ content | safe }}
   </body>
