Add site metadata and page structure

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -18,7 +18,9 @@
     <m-website-header name="11ty Starter">
       <a href="/">Log in</a>
     </m-website-header>
-    <h1>{{title }}</h1>
-    {{ content | safe }}
+    <main class="viewport-container">
+      <h1>{{title }}</h1>
+      {{ content | safe }}
+    </main>
   </body>
 </html>
