--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ meta.language }}">
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>
-      {{ title }}
+      {{ title }} | {{ meta.siteName }}
     </title>
     <link rel="icon" href="{{ '/favicon.png' | url }}"/>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
@@ -19,9 +19,19 @@
       <m-website-header name="11ty Starter">
         <a href="/">Log in</a>
       </m-website-header>
+      <nav aria-label="Primary Navigation">
+        <ul>
+          {% for page in collections.pages %}
+            <li>
+              <a href="{{ page.url }}">
+                {{ page.data.title }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
     </div>
     <main class="viewport-container">
-      <h1>{{ title }}</h1>
       {{ content | safe }}
     </main>
     <!-- Footer y'all-->
