--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     <title>
       {{ title }} | {{ meta.siteName }}
     </title>
-    <link rel="icon" href="{{ '/favicon.png' | url }}"/>
+    <link rel="icon" href="{{ '/img/favicon.png' | url }}"/>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
     <link href="https://unpkg.com/@umich-lib/web@1/umich-lib.css" rel="stylesheet"/>
     <script type="module" src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.esm.js"></script>
