Layout for breadcrumbs and sidenav

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,10 +20,10 @@
         <a href="/">Log in</a>
       </m-website-header>
     </div>
-    <main class="viewport-container">
+    <main class="viewport-container layout">
       {{ content | safe }}
     </main>
-    <!-- Footer y'all-->
+ 
     <footer class="footer">
       <div class="viewport-container">
         <div class="footer__content">
