--- a/src/_includes/partials/breadcrumbs.njk
+++ b/src/_includes/partials/breadcrumbs.njk
@@ -3,8 +3,8 @@
 <nav aria-label="breadcrumbs" class="breadcrumbs">
    <ol>
   {% for entry in navPages %}
-    <li {% if entry.url == page.url %} class="active-page" aria-current="page" {% endif %}>
-      <a href="{{ entry.url }}">{{ entry.title }}</a>
+    <li>
+      <a {% if entry.url == page.url %} class="active-page" aria-current="page" {% endif %} href="{{ entry.url }}">{{ entry.title }}</a>
     </li>
   {% endfor %}
   </ol>
