--- a/src/_includes/partials/primary-nav.njk
+++ b/src/_includes/partials/primary-nav.njk
@@ -1,4 +1,4 @@
-<nav aria-label="Primary Navigation">
+<nav aria-label="Primary Navigation" class="left-side-nav">
         <ul>
           {% for page in collections.pages %}
             <li>
