--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,6 +1,12 @@
 ---
 layout: base.njk
 ---
-  {% include "partials/primary-nav.njk" %}
 
+<div class="grid-layout">
+  <aside class="aside">
+   {% include "partials/primary-nav.njk" %}
+  </aside>
+  <div class="main-content">
   {{ content | safe }}
+</div>
+</div>
