--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,16 +14,22 @@
     <script nomodule src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.js"></script>
   </head>
   <body>
+    <div aria-label="Skip links" class="[ skip-links ]">
+      <div class="[ viewport-container ]">
+        <ul>
+          <li><a href="#main">Skip to main content</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="headers">
       <m-universal-header></m-universal-header>
       <m-website-header name="11ty Starter">
         <a href="/">Log in</a>
       </m-website-header>
     </div>
-    <main class="viewport-container layout">
+    <main class="viewport-container layout" id="main">
       {{ content | safe }}
     </main>
- 
     <footer class="footer">
       <div class="viewport-container">
         <div class="footer__content">
