Add link to footer for bypass

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -19,6 +19,9 @@
         <ul>
           <li><a href="#main">Skip to main content</a></li>
         </ul>
+        <ul>
+          <li><a href="#footer">Skip to footer content</a></li>
+        </ul>
       </div>
     </div>
     <div class="headers">
@@ -30,7 +33,7 @@
     <main class="viewport-container layout" id="main">
       {{ content | safe }}
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="viewport-container">
         <div class="footer__content">
           <section>
