Stop trying to make grid happen

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -3,7 +3,7 @@ layout: base.njk
 ---
 
 {% include "partials/breadcrumbs.njk" %}
-<div class="grid-layout">
+<div class="flex-layout">
   <aside class="aside">
   {% include "partials/side-nav.njk" %}
   </aside>
