--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,16 +14,14 @@
     <script nomodule src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.js"></script>
   </head>
   <body>
-    <div aria-label="Skip links" class="[ skip-links ]">
+    <section aria-label="Skip links" class="[ skip-links ]">
       <div class="[ viewport-container ]">
         <ul>
           <li><a href="#main">Skip to main content</a></li>
-        </ul>
-        <ul>
           <li><a href="#footer">Skip to footer content</a></li>
         </ul>
       </div>
-    </div>
+    </section>
     <div class="headers">
       <m-universal-header></m-universal-header>
       <m-website-header name="11ty Starter">
@@ -36,7 +34,7 @@
     <footer class="footer" id="footer">
       <div class="viewport-container">
         <div class="footer__content">
-          <section>
+          <section class="first-column">
             <h2>University of Michigan Library</h2>
             <ul>
               <li><a href="https://lib.umich.edu/"><svg width="16px" height="16px" viewbox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false" role="img"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5
