--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,11 +2,11 @@
 layout: base.njk
 ---
 
-<div class="grid-layout">
+<div class="flex-layout">
   <aside class="aside">
    {% include "partials/primary-nav.njk" %}
   </aside>
   <div class="main-content">
   {{ content | safe }}
-</div>
+  </div>
 </div>
