--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -2,10 +2,23 @@
   margin: 2rem auto;
 }
 
-.grid-layout {
-  display: grid;
-  grid-template-columns: 14rem auto;
-  grid-gap: 2.5rem;
+.flex-layout {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: start;
+  align-items: stretch;
   padding-top: 2rem;
-  justify-items: start;
 }
+
+.flex-layout > :first-child {
+  flex-grow: 1;
+  flex-basis: 12rem;
+}
+
+.flex-layout > :last-child {
+  flex-basis: 0;
+  flex-grow: 999;
+  min-inline-size: 50%;
+}
+  
