--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,6 +1,7 @@
 .left-side-nav ul {
  list-style: none;
  padding-left: 0;
+ margin-top: 0;
 }
 
 .left-side-nav li {
@@ -12,7 +13,7 @@
   color: var(--color-neutral-400);
   text-decoration: none;
   display: block;
-  padding: .5rem;
+  padding: .5rem 0;
 
   &:hover {
     text-decoration: underline;
