Prettier formatting on njk files

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -59,12 +59,11 @@
         <div class="viewport-container">
           <p>© {% year %}, Regents of the University of Michigan</p>
           <p>
-            Built with the U-M Library Design System
+            Built with the
+            <a href="https://design-system.lib.umich.edu/">U-M Library Design System</a>
           </p>
-        </a>
-      </p>
-    </div>
- </div>
- </footer>
- </body>
- </html>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
