Clean up sass files

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -1,7 +1,9 @@
-/*
- * [Modified] Modern CSS Reset
- * @link https://github.com/hankchizljaw/modern-css-reset
-*/
+// --------------------------------------------------
+//
+// # [Modified] Modern CSS Reset
+//   @link https://github.com/hankchizljaw/modern-css-reset
+// 
+// --------------------------------------------------
 
 /* Box sizing rules */
 *,
