--- a/src/sass/_skip-link.scss
+++ b/src/sass/_skip-link.scss
@@ -1,3 +1,12 @@
+// --------------------------------------------------
+//
+// # Skip link 
+//   Satisfies WCAG 2.1: 2.4.1 Bypass Blocks
+//   @link https://codepen.io/team/umlibrary-designsystem/pen/gOogXeG
+//
+// --------------------------------------------------
+
+
 .skip-links {
   background: var(--color-blue-400);
   padding: var(--space-small);
