--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,3 +1,11 @@
+// --------------------------------------------------
+//
+// # Site Layoyt
+//   Flex for pages
+//
+// --------------------------------------------------
+
+
 .layout {
   margin: 2rem auto;
 }
