--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,3 +1,10 @@
+// --------------------------------------------------
+//
+// # Navigation: Side and Primary
+//
+// --------------------------------------------------
+
+
 .left-side-nav ul {
  list-style: none;
  padding-left: 0;
