--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,11 +7,25 @@
     <title>
       {{ title }} | {{ meta.siteName }}
     </title>
+    <!-- Open Graph -->
+    <meta property="og:title" content="{{ title }}"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="{{ meta.siteDescription }}"/>
+    <meta property="og:image" content="{{ '/img/social-card.png' | url }}"/>
+    <meta property="og:url" content="{{ meta.url }}"/>
+    <meta property="og:locale" content="en_US"> 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="{{ meta.url }}">
+    <meta property="twitter:title" content="{{ title }}">
+    <meta property="twitter:description" content="{{ meta.siteDescription }}">
+    <meta property="twitter:image" content="{{ '/img/social-card.png' | url }}">
+    <meta property="twitter:image:alt" content="">
     <link rel="icon" href="{{ '/img/favicon.ico' | url }}"/>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
-    <link href="https://unpkg.com/@umich-lib/web@1/umich-lib.css" rel="stylesheet"/>
-    <script type="module" src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.esm.js"></script>
-    <script nomodule src="https://unpkg.com/@umich-lib/web@1/dist/umich-lib/umich-lib.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/@umich-lib/web@1.3.0/umich-lib.css" rel="stylesheet"/>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/web@1.3.0/dist/umich-lib/umich-lib.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@umich-lib/components@1.1.0/dist/umich-lib/umich-lib.js"></script>
   </head>
   <body>
     <section aria-label="Skip links" class="[ skip-links ]">
