--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -26,6 +26,7 @@
     <link href="https://cdn.jsdelivr.net/npm/@umich-lib/web@1.3.0/umich-lib.css" rel="stylesheet"/>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/web@1.3.0/dist/umich-lib/umich-lib.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@umich-lib/components@1.1.0/dist/umich-lib/umich-lib.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <section aria-label="Skip links" class="[ skip-links ]">
@@ -51,21 +52,24 @@
           <section class="first-column">
             <h2>University of Michigan Library</h2>
             <ul>
-              <li><a href="https://lib.umich.edu/"><svg width="16px" height="16px" viewbox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false" role="img"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5
-                2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"></path></svg><span>913 S. University Avenue<br>Ann Arbor, MI 48109-1190</span></a></li>
+              <li><a href="https://lib.umich.edu/"><span class="address">913 S. University Avenue Ann Arbor, MI 48109-1190</span></a></li>
             </ul>
           </section>
           <section>
-            <h2>Privacy and Copyright</h2>
+            <h2>Heading Column 2</h2>
             <ul>
-              <li>
-                <a href="https://www.lib.umich.edu/about-us/policies/library-privacy-statement">Library Privacy Statement</a>
-              </li>
+              <li><a href="#">List item link</a></li>
+              <li><a href="#">List item link</a></li>
+              <li><a href="#">List item link</a></li>
             </ul>
-            <p>Except where otherwise noted, this work is subject to a
-              <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 license</a>. For details and exceptions, see the
-              <a href="http://www.lib.umich.edu/library-administration/library-copyright-statement">Library Copyright Policy</a>.
-            </p>
+          </section>
+          <section>
+            <h2>Heading Column 3</h2>
+            <ul>
+              <li><a href="#">List item link</a></li>
+              <li><a href="#">List item link</a></li>
+              <li><a href="#">List item link</a></li>
+            </ul>
           </section>
         </div>
       </div>
