--- a/src/scss/_site-footer.scss
+++ b/src/scss/_site-footer.scss
@@ -1,3 +1,5 @@
+@use 'media';
+
 // --------------------------------------------------
 //
 // # Site footer
@@ -7,20 +9,27 @@
 
 .footer {
   background: var(--color-blue-400);
+  color: white;
 }
+
 .footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 .footer ul a {
   display: inline-block;
-  padding: var(--space-x-small) 0;
+  padding: var(--space-xx-small) 0;
+  &:hover {
+      text-decoration: underline;
+      text-decoration-thickness: 1px;    
+  }
 }
 
 .footer ul a span:hover {
   text-decoration: underline;
-  text-decoration-thickness: 2px;
+  text-decoration-thickness: 1px;
 }
 
 .footer a {
@@ -29,6 +38,10 @@
 
 .footer a > svg {
   margin-right: 0.5em;
+}
+
+.address {
+  max-width: 22ch;
 }
 
 .footer__content {
@@ -43,6 +56,10 @@
   text-decoration: none;
   display: flex;
   align-items: baseline;
+}
+
+.footer__content ul li a {
+  text-decoration: none;
 }
 
 .footer__content h2 {
@@ -77,6 +94,10 @@
 
 .footer__disclaimer p {
   margin: 0;
+
+  @include media.breakpoint('sm', 'max-width') {
+    padding-top: .5rem;
+   }
 }
 
 @media screen and (min-width: 820px) {
