New design for side navigation

--- a/src/_includes/partials/primary-nav.njk
+++ b/src/_includes/partials/primary-nav.njk
@@ -1,4 +1,4 @@
-<nav aria-label="Primary Navigation" class="left-side-nav">
+<nav aria-label="Primary Navigation" class="side-nav">
   <ul>
     {% for page in collections.pages %}
       <li>
