Add banner and card partials

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -43,7 +43,7 @@
         <a href="/">Log in</a>
       </m-website-header>
     </div>
-    <main class="viewport-container layout" id="main">
+    <main class="layout" id="main">
       {{ content | safe }}
     </main>
     <footer class="footer" id="footer">
