--- a/src/_includes/layouts/static.njk
+++ b/src/_includes/layouts/static.njk
@@ -3,15 +3,12 @@ layout: base.njk
 ---
 
 <div class="viewport-container">
-  {% include "partials/breadcrumbs.njk" %}
-  <div class="flex-layout container">
-    <aside class="page-aside">
-      {% include "partials/side-nav.njk" %}
-    </aside>
+  <div class="flex-static container">
     <div class="main-content">
       <div class="prose">
         {{ content | safe }}
       </div>
     </div>
+    <img class="image-404-page" src="https://assets.codepen.io/2087493/404.webp?width=1012&amp;height=779&amp;format=auto" alt="">
   </div>
 </div>  
