--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -3,10 +3,13 @@ layout: base.njk
 ---
 
 <div class="flex-layout">
-  <aside class="aside">
-    {% include "partials/primary-nav.njk" %}
-  </aside>
   <div class="main-content">
-    {{ content | safe }}
+   {% include "partials/banner.njk" %}
+    <div class="viewport-container">
+       {{ content | safe }}
+    </div>
+    <div class="viewport-container">
+      {% include "partials/cards.njk" %}
+    </div>
   </div>
 </div>
