--- a/src/_includes/partials/banner-hero.njk
+++ b/src/_includes/partials/banner-hero.njk
@@ -5,6 +5,11 @@
           <p> This is the home page by the {{ meta.author.name }}.</p>
           <p> This is where you might have a banner with some text and an image.</p>
      </div>
-   <div class="banner-image"></div>
+   <div class="banner-image">
+      <!--
+      This is an optional image. It does not show on mobile and is a CSS background image so there
+      is no alt text. If this is a meaningful image, make it an <img> and add alt text! 
+      -->
+   </div>
   </div>
 </div>
