--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -4,6 +4,8 @@
 // # Banners
 //   1. Banners (heros) for home and landing pages
 //   Background color, heading, text, and image (if applicable)
+//   2. Banners found above footer
+//   Full width banner containing text feedback form or contact
 // --------------------------------------------------
 
 
@@ -24,9 +26,7 @@
 }
 
 .banner-image {
-  background-image: linear-gradient(45deg,
-  rgba(16, 102, 132, 0.25),
-  rgba(8,83,156, 0.25)), url("/img/library.webp");
+  background-image: url("https://source.unsplash.com/ezJhm4xrHAM/1600x900");
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -65,4 +65,28 @@
   @include media.breakpoint('sm', 'max-width') {
     width: 100%;
   }
+}
+
+// ******************************************** //
+// *** 2. Banners for Feedback and Contact *** //
+// ****************************************** //
+
+.feedback-banner {
+  background-color: var(--color-indigo-100);
+  padding: 1em 0;
+  
+  a {
+    font-weight: bold;
+  }
+}
+
+.feedback-banner-container {
+  display: flex;
+  align-items: center;
+}
+
+.feedback-icon, .contact-icon {
+  border-radius: 100%;
+  margin-right: .5rem;
+  color: var(--color-teal-400);
 }
