--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -28,9 +28,9 @@
 
   a {
     text-decoration: none;
-    transition: box-shadow ease-in .4s;
+    transition: box-shadow ease-in .2s;
     display: inherit;
-    border-radius: 6px;
+    border-radius: 0;
   }
 
   a:hover {
@@ -45,7 +45,7 @@
 .card {
   background-color: var(--color-blue-100);
   padding: 1rem 1.5rem; 
-  border-radius: 6px;
+  border-radius: 0;
   border: solid 1px var(--color-neutral-100);
 
   h2 {
